# Duplicate-Folders-Finder

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  Duplicates.cpp  Duplicates.h  Duplicates.ui  duplicates.rc.in  main.cpp  readme.md
resources/: resources.qrc
